# aoc2022

./: Cargo.toml
day1/src/: lib.rs
lib/day1/: Cargo.toml
lib/day1/src/: lib.rs
src/: main.rs
